<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_editar"
        android:icon="@drawable/ic_editar"
        android:title="@string/editar"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/menu_eliminar"
        android:icon="@drawable/ic_eliminar"
        android:title="@string/eliminar"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_exportar"
        android:title="@string/exportar"
        android:textColor="?attr/colorOnSurface"
        app:showAsAction="never">

        <menu>
            <item
                android:id="@+id/action_exportar_html"
                android:title="@string/exportar_html"
                app:showAsAction="never"/>
            <item
                android:id="@+id/action_exportar_pdf"
                android:title="@string/exportar_pdf"
                app:showAsAction="never"/>
        </menu>

    </item>
    <item
        android:id="@+id/action_ayudaCE"
        android:title="Ayuda"
        app:showAsAction="never"/>
</menu>